resolverSet, part2 + fix tests